// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LogService createLog creates a log when bot and worker exist 1`] = `
{
  "bot": "bot-1",
  "created": "2023-11-14T22:13:20.000Z",
  "id": "log-1",
  "message": "Hello from the worker",
  "worker": "worker-1",
}
`;

exports[`LogService getLogsByBotId returns logs when bot exists 1`] = `
{
  "count": 1,
  "items": [
    {
      "bot": "bot-1",
      "created": "2023-11-14T22:13:20.000Z",
      "id": "log-1",
      "message": "Hello from the worker",
      "worker": "worker-1",
    },
  ],
  "total": 1,
}
`;

exports[`LogService getLogsByWorkerId returns logs when worker exists 1`] = `
{
  "count": 1,
  "items": [
    {
      "bot": "bot-1",
      "created": "2023-11-14T22:13:20.000Z",
      "id": "log-1",
      "message": "Hello from the worker",
      "worker": "worker-1",
    },
  ],
  "total": 1,
}
`;

exports[`LogService getLogsWithFilter filters by bot with clamped limit/offset 1`] = `
{
  "count": 1,
  "items": [
    {
      "bot": "bot-1",
      "created": "2023-11-14T22:13:20.000Z",
      "id": "log-1",
      "message": "Hello from the worker",
      "worker": "worker-1",
    },
  ],
  "total": 1,
}
`;
